# ip-readme-gen

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
injector/: readme.py
ir/: model.py
parser/: vhdl_parser.py
tests/: test_readme_gen.py
